# ThreadAdder

thread_adder/: CMakeLists.txt
thread_adder/include/: functions.h
thread_adder/src/: functions.c  threader.c
